# BSU

./: .gitignore  README.md  readme.md
term_3/Calculation Methods/03/: CMakeLists.txt
term_3/calculation_methods/02/: CMakeLists.txt  main.cpp
term_3/calculation_methods/03/: main.cpp
term_3/calculation_methods/04/: CMakeLists.txt  main.cpp
term_3/calculation_methods/05/: CMakeLists.txt  main.cpp  отчёт 5.pages
term_3/computer_graphics/LAB2/: DEVELOPER_DOCUMENTATION.md  USER_DOCUMENTATION .md  main.py
term_3/computer_graphics/LAB5/: main.py
term_3/industrial_programming/lab7/: pom.xml
term_4/Calculation_Methods/lab1/: main.cpp
term_4/Calculation_Methods/lab2/: main.cpp
term_4/OS/Colloquium/: CMakeLists.txt  readme.md
term_4/OS/Colloquium 2/: README.md  task.cpp
term_4/OS/Colloquium 3/: README.md  mediator.cpp  observer.cpp  state.cpp
term_4/OS/Colloquium/include/: fibonacci.h  linked_list.h  palindrome.h
term_4/OS/Colloquium/src/: fibonacci.cpp  linked_list.cpp  palindrome.cpp
term_4/OS/Colloquium/tests/: test_fibonacci.cpp  test_linked_list.cpp  test_palindrome.cpp
term_4/OS/lab2/: Child.cpp  Parent.cpp
term_4/OS/lab3/: lab3.1.cpp
term_4/OS/lab4/: Administrator.cpp  Reader.cpp
term_4/TPMP/lab1/: main.c  readme.md
term_4/WEB/lab1/: page3.html  page4.html  page5.html
term_4/WEB/lab2/: maket_div.html  maket_table.html  page1.html  page2.html
term_4/WEB/lab3/: maket_adapt.css  maket_adapt.html  transport_com.html  transport_com.js
term_4/WEB/lab4/: transport_com.css  transport_com.js
term_4/WEB/lab5/: form.css  form.html  form.js  (+1 more)
(+51 files in other folders)
